# Aomsin-Tid-Data

./: .gitignore  AI Use Declaration.md  BRANCHING_GUIDE.md  LICENSE  QUICKSTART.md  README.md  main.py  pyproject.toml  verify_setup.py
.agent/: rules.md
.github/workflows/: dashboard.yml  data_pipeline.yml  main.yml
dashboard/: next.config.ts  package-lock.json  package.json
dashboard/public/data/analysis/: analysis_summary.json  demo_chart.toml
dashboard/public/data/modeling/: model_metrics.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/analysis/: page.tsx
dashboard/src/app/credits/: page.tsx
dashboard/src/components/: DataTable.tsx  Layout.tsx  Sidebar.tsx  StatCard.tsx  Topbar.tsx  UniversalChart.tsx
dashboard/src/utils/: basePath.ts  tomlLoader.ts
data/: Cars.csv  README.md
data/cleaned/: Cars_cleaned.csv  Customers_cleaned.csv  Sales_merged.csv
data/raw/: Customers.csv  Sales.csv
documentation/: .~lock.AI Use Declaration.odt#  AI Use Declaration.md  AI Use Declaration.odt  Report.md  Report.odt  data_integration_guide.md  plan.md
documentation/AI report/: report_eda_analysis_notebook.md
notebooks/: data_analysis_template.ipynb
notebooks/analysis/: 2_analysis.ipynb
notebooks/modeling/: 4_model_testing.ipynb  5_model_training.ipynb
notebooks/modeling/train/: 3_model_training.ipynb
notebooks/preprocessing/: 1_cleaning.ipynb  1_cleaning.nbconvert.ipynb  exploratory_data_analysis.ipynb
src/: __init__.py
src/dashboard/: __init__.py  app.py
src/utils/: dashboard_helper.py  data_manager.py
(+6 files in other folders)
