[project]
name = "aomsin-tid-data"
version = "0.1.0"
description = "A data analysis project with Jupyter notebooks and interactive dashboard"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "streamlit>=1.28.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.25.0",
    "openpyxl>=3.1.0",
    "scipy>=1.11.0",
    "polars>=1.37.1",
    "scikit-learn>=1.8.0",
    "toml>=0.10.2",
    "statsmodels>=0.14.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py314']

[tool.ruff]
line-length = 88
target-version = "py314"
